src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>LuizaCode__c</fullName>
        <externalId>true</externalId>
        <label>LuizaCode</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProductValue__c</fullName>
        <label>Valor do produto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Produtos</relationshipLabel>
        <relationshipName>Produtos</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>